Update thesis documents

--- a/docs/wut_thesis/bibliografia.bib
+++ b/docs/wut_thesis/bibliografia.bib
@@ -136,6 +136,54 @@
   urldate = {2022-01-08}
 }
 
+@online{ikea2022,
+  author = {Ikea},
+  title = {pytradfri},
+  year = {2022},
+  url = {https://github.com/home-assistant-libs/pytradfri},
+  urldate = {2022-01-08}
+}
+
+@online{github2022,
+  author = {Stanislaw Skrzypek},
+  title = {DagAir},
+  year = {2022},
+  url = {https://github.com/fokamdk99/DagAir},
+  urldate = {2022-01-08}
+}
+
+@online{prometheus2022,
+  author = {Prometheus},
+  title = {Overview},
+  year = {2022},
+  url = {https://prometheus.io/docs/introduction/overview/},
+  urldate = {2022-01-08}
+}
+
+@online{aspnet2022,
+  author = {Docker Inc.},
+  title = {ASP.NET Core Runtime},
+  year = {2022},
+  url = {https://hub.docker.com/_/microsoft-dotnet-aspnet},
+  urldate = {2022-01-08}
+}
+
+@online{dotnetsdk2022,
+  author = {Docker Inc.},
+  title = {.NET SDK},
+  year = {2022},
+  url = {https://hub.docker.com/_/microsoft-dotnet-sdk},
+  urldate = {2022-01-08}
+}
+
+@online{git2022,
+  author = {Software Freedom Conservancy},
+  title = {Git},
+  year = {2022},
+  url = {https://git-scm.com/docs/git},
+  urldate = {2022-01-08}
+}
+
 @online{vickers2021,
   author = {Vickers, A},
   title = {Identity model customization in ASP.NET Core},
@@ -152,9 +200,25 @@
 }
 
 @inbook{newmanb2015,
-    author      = "Sam Newam",
+    author      = "Sam Newmam",
     title       = "Building microservices",
     publisher   = "O'Reilly",
     pages       = "16-27",
     year        = "2015"
+}
+
+@inbook{delatorre2015,
+    author      = "de la Torre, C. and Wagner, B. and Rousos, M.",
+    title       = ".NET Microservices: Architecutre for containerized .NET applications",
+    publisher   = "Microsoft",
+    pages       = "31-32",
+    year        = "2022"
+}
+
+@inbook{sommerville2011,
+    author      = "Sommerville, I.",
+    title       = "Software Engineering",
+    publisher   = "Pearson",
+    pages       = "72-73",
+    year        = "2011"
 }
