--- a/docs/wut_thesis/tex/10-podsumowanie.tex
+++ b/docs/wut_thesis/tex/10-podsumowanie.tex
@@ -1,6 +1,51 @@
 \newpage
 \section{Podsumowanie}
+
+System do zarządzania warunkami technicznymi w pomieszczeniach biurowych jest publicznie
+dostępny w serwisie GitHub\cite{github2022}.
+
+\subsection{Aktualny stan pracy}
+\label{subsection:aktualny-stan-pracy}
+
+W ramach seminarium inżynierskiego udało się osiągnąć następujące rezultaty:
+
+\begin{itemize}
+    \item Każdy z serwisów został utworzony, uruchamia się prawidłowo i skutecznie
+    komunikuje się z innymi serwisami przy pomocy brokera wiadomości lub
+    żądania http
+    \item Utworzono obrazy kontenerów każdego z serwisów. Uruchamiają się prawidłowo
+    i skutecznie komunikują się między sobą, zarówno na środowisku lokalnym, jak
+    i wewnątrz klastra kubernetesowego
+    \item Graficzny interfejs użytkownika pozwala zarządzać organizacją, oddziałami
+    oraz pomieszczeniami, wyświetla także aktualne wyniki pomiarów
+    \item Zestaw pomiarowy w regularnych odstępach czasu zbiera pomiary i wysyła je 
+    na kolejkę do brokera wiadomości. Wiadomości są pobierane przez SSDS i przesyłane 
+    dalej
+    \item Udało się skonfigurować środowisko na platformie Azure, dzięki czemu system
+    był publicznie dostępny w internecie. Niestety utrzymanie środowiska generowało
+    znaczące koszty, przez co zdecydowano się na jego usunięcie
+\end{itemize}
+
+Spośród wszystkich planowanych funkcjonalności można wskazać kilka, których nie udało się
+jeszcze zrealizować:
+
+\begin{itemize}
+    \item Utworzenie kompletnego zestawu styków oferowanych przez serwisy. W rozdziale
+    \ref{section:komunikacja-miedzy-serwisami} przedstawiono listę zaimplementowanych 
+    styków. Nie definiują one wszystkich zaplanowanych usług, m. in. takich, które umożliwiały by aktualizację przechowywanych
+    danych, tzn. brakuje usług akceptujących czasownik HTTP UPDATE.
+    \item Utworzenie kompletnego interfejsu graficznego. Jest to konsekwencja braku
+    kompletnych styków
+\end{itemize}
+
 \subsection{Możliwości rozszerzenia projektu}
+\subsubsection{Planowane komponenty}
+
+Pierwszym z pomysłów na dalszy rozwój systemu jest dodanie komponentów opisanych
+w podrozdziale \ref{subsection:aktualny-stan-pracy}, których nie udało się do tej pory
+zaimplementować. W znaczący sposób zwiększy to funkcjonalność rozwiązania.
+
+\subsubsection{Inteligentne oświetlenie}
 
 Projekt został przygotowany z myślą o tym, by można było możliwie łatwo tworzyć nowe 
 serwisy i integrować je z już istniejącymi. Ważnym elementem ułatwiającym dodawanie 
@@ -12,5 +57,46 @@ spełniają oczekiwań. Jednym z pomysłów dalszego rozwoju projektu jest wykor
 towarów produkowanych przez firmę Ikea. Zastosowanie inteligentnego oświetlenia 
 wykorzystującego protokół ZigBee pozwoliłoby na automatyczne sterowanie poziomem 
 natężenia światła przez aplikację. W tym celu należałoby utworzyć nowy serwis 
-wykorzystujący gotową bibliotekę \href{https://github.com/home-assistant-libs/pytradfri}{pytradfri} 
+wykorzystujący gotową bibliotekę \textit{pytradfri} \cite{ikea2022}
 pozwalającą na zarządzanie oświetleniem.
+
+\subsubsection{Aplikacja mobilna}
+
+Wartą rozważenia opcją jest utworzenie dedykowanej aplikacji mobilnej na urządzenia
+obsługujące systemy Android lub iOS. Aplikacja oferowałaby podobny zestaw funkcjonalności
+co aplikacje webowe, a dodatkowo posiadałaby system powiadomień, który generowałby
+wiadomości typu push za każdym razem przy wystąpieniu konkretnego zdarzenia, jak na 
+przykład przekroczenie ustalonego progu temperatury lub natężenia oświetlenia.
+
+\subsubsection{Zaawansowany zestaw pomiarowy}
+
+Propozycją dalszego rozwoju projektu jest dodanie innych czujników i przeprowadzanie
+kompleksowych pomiarów dla danego pomieszczenia. Możliwymi rozszerzeniami są między
+innymi czujnik wilgotności powietrza lub czujnik jakości powietrza. Na ich podstawie
+można by generować bardziej szczegółówe wyniki i w ten sposób jeszcze bardziej
+zwiększyć wydajność pracowników oraz ograniczyć zużycie energii. Atutem utworzonego
+systemu jest łatwość dodawania nowych czujników, wystarczy je bowiem podpiąć 
+przy pomocy zestawu przewodów połączeniowych do wolnych wejść mikrokontrolera, a następnie dodać
+oprogramowanie umożliwiające odczyt pomiarów. 
+
+\subsubsection{Monitorowanie aplikacji}
+
+Do tej pory wystarczającym instrumentem do sprawdzenia poprawności działania systemu
+było przeprowadzenie testów jednostkowych, integracyjnych oraz end-2-end. Jednak
+wraz z dalszym rozwojem systemu konieczne będzie skonfigurowanie jego monitoringu.
+Powodów jest wiele, między innymi:
+
+\begin{itemize}
+    \item Monitorowanie ogólnego stanu, w jakim znajduje się system
+    \item Zbieranie metryk umożliwiających oszacowanie wydajności systemu
+    \item Upewnienie się, że oferowane przez mikroserwisy usługi są dostępne i na bieżąco przetwarzają żądania
+    \item Możliwość odnalezienia fragmentów systemu, które spowalniają jego działanie
+    lub w ogóle nie funkcjonują
+\end{itemize}
+
+Jednym z istniejących narzędzi do zbierania kolekcjonowania metryk opisujących
+stan systemu jest Prometheus\cite{prometheus2022}. Jest to narzędzie do monitorowania
+aplikacji, w szczególności przeznaczone do aplikacji rozproszonych, opartych na
+architekturze mikroserwisowej. Pozwala agregować dane dotyczące zużycia procesora,
+pamięci czy dysku, a także tworzyć własne metryki, które mogą przykładowo mierzyć
+czas potrzebny na przetworzenie przychodzących żądań http.
