--- a/docs/wut_thesis/tex/2-istniejace-rozwiazania.tex
+++ b/docs/wut_thesis/tex/2-istniejace-rozwiazania.tex
@@ -1,13 +1,13 @@
 \newpage
 \section{Istniejące rozwiązania}
 Firma Sharp przygotowała podobne rozwiązanie, za pomocą którego można mierzyć kluczowe 
-parametry danego pomieszczenia, przesyłać je na platformy chmurowe i je analizować 
-\cite{sharp2022}. Różnica między tym produktem a rozwiązaniem proponowanym w tej pracy 
+parametry danego pomieszczenia, przesyłać je na platformy chmurowe i analizować 
+\cite{sharp2022}. Różnica między tym produktem a rozwiązaniem proponowanym w niniejszej pracy 
 polega na tym, że w rozwiązaniu firmy Sharp czujniki są wbudowane w monitor służący 
-jako centrum telekonferencyjne. W ten sposób wykonywane pomiary stają się niejako 
-dodatkiem do monitora, niż głównym celem wstawienia urządzenia do konkretnej sali. 
+jako centrum telekonferencyjne. W ten sposób wykonywane pomiary stają się raczej 
+dodatkiem do monitora, niż główną rolą wstawienia urządzenia do konkretnej sali. 
 W konsekwencji, wykonywanie pomiarów w wielu salach wiązałoby się z koniecznością 
 zakupu drogiego monitora dla każdej z nich. Proponowane w tej pracy rozwiązanie zawiera 
-jedynie zestaw czujników przesyłających pomiary do systemu, bez innych dodatków, co 
+jedynie zestaw czujników zintegrowanych z systemem, bez innych dodatków, co 
 znacznie minimalizuje koszt wdrożenia takiego rozwiązania. Dzięki temu opłacalne staje
 się zbieranie pomiarów z wielu sal jednocześnie.
