--- a/docs/wut_thesis/tex/7-testy.tex
+++ b/docs/wut_thesis/tex/7-testy.tex
@@ -3,7 +3,7 @@
 
 Dobrą praktyką pozwalającą znacznie ograniczyć występowanie błędów w ostatecznej 
 wersji systemu jest przygotowanie testów sprawdzających działanie poszczególnych 
-funkcji. Istnieją kilka rodzajów testów, które można pogrupować tak jak na rysunku
+funkcji. Istnieje kilka rodzajów testów, które można pogrupować tak jak na rysunku
 \ref{fig:test-types}.
 
 \begin{figure}[h]
@@ -13,19 +13,19 @@ funkcji. Istnieją kilka rodzajów testów, które można pogrupować tak jak na
     \label{fig:test-types}
 \end{figure}
 
-Dwie kategorie znajdujące się na dole - unit testing oraz property testing - mają 
-pomóc deweloperom stworzenie działającego kodu. Tego rodzaju testy mają na celu 
+Dwie kategorie znajdujące się na dole - \textit{unit testing} oraz \textit{property testing} - mają 
+pomóc deweloperom utworzyć działający kod. Tego rodzaju testy mają na celu 
 sprawdzenie, czy system nie jest obciążony usterkami związanymi z implementacją. 
-Celem testów należących do dwóch kategorii znajdujących się na górze - acceptance 
-testing oraz exploratory testing - jest pomoc w zrozumieniu jak dany system działa. 
+Celem testów należących do dwóch kategorii znajdujących się na górze - \textit{acceptance 
+testing} oraz \textit{exploratory testing} - jest pomoc w zrozumieniu jak dany system działa. 
 Do tego rodzaju testów można zaliczyć m. in. szerokie testy obejmujące działanie dużej 
-ilości serwisów, sprawdzenie funkcjonalności systemu oraz tzw. „user acceptance 
-testing”, czyli testy przeprowadzone przez klienta, który zlecił budowę systemu.
+liczby mikroserwisów, sprawdzenie funkcjonalności systemu oraz tzw. \textit{user acceptance 
+testing}, czyli testy przeprowadzone przez klienta, który zlecił budowę systemu.
 
 \subsection{Testy jednostkowe}
 
-Tego rodzaju testy sprawdzają poprawność pojedynczej funkcji w kodzie. Nie uruchamia 
-się całego serwisu, a jedynie sprawdza jego część. Wszystkie parametry, które 
+Tego rodzaju testy sprawdzają poprawność pojedynczej metody w kodzie. Nie sprawdza się działania 
+się całego mikroserwisu, a jedynie jego wyodrębioną część. Wszystkie parametry, które 
 przyjmuje dana funkcja, są tworzone w trakcie testu. Testy jednostkowe są wykonywane 
 w pierwszej fazie testów ze względu na szybkość ich wykonania. Ich celem jest wykrycie 
 błędów związanych z daną technologią, nie zaś sprawdzenie, czy działanie systemu jest 
@@ -91,39 +91,34 @@ w stanie się ze sobą skutecznie komunikować. Przykładem jest poniższy test:
     }    
 \end{lstlisting}
 
-Klient testowy korzysta z oferowanego przez testowany mikroserwis styku poprzez 
+Klient testowy korzysta z oferowanej przez testowany mikroserwis usługę poprzez 
 wysłanie żądania http. W tym przypadku nie jest testowana logika zawarta w testowanym 
 mikroserwisie, a jedynie odpowiedź, którą odsyła. Status odpowiedzi powinien oznaczać 
 sukces, sygnalizowany przez kod 200 OK \cite{fielding1999}.
 
 \subsection{Testy end-2-end}
 
-Testy typu end2-end mają za zadanie przetestować pewne biznesowe 
+Testy typu end-2-end mają za zadanie przetestować pewne biznesowe 
 funkcjonalności, których realizacja może być obsługiwana przez wiele mikroserwisów. 
-Dobrą praktyką jest utrzymywanie niewielkiej liczbę tego typu testów, ponieważ 
-obejmują one zakres całego systemu i przeprowadzenie każdego z nich zajmuje dużo 
+Dobrą praktyką jest utrzymywanie niewielkiej liczby tego typu testów, ponieważ 
+obejmują one zakres działania całego systemu i przeprowadzenie każdego z nich zajmuje dużo 
 czasu. Ponadto, w przypadku wystąpienia usterki ciężko jest wykryć miejsce, które 
 było źródłem błędu.
-Przykładem jest poniższy test:
+Przykładem jest poniższy test, napisany w języku programowania Python:
 
 \begin{lstlisting}
 def measurement_triggers_policies_evaluation_result_event():
     new_measurement_test_helper = NewMeasurementTestHelper()
 
-    # check that influxdb is available and bucket exists
     new_measurement_test_helper
         .check_influxdb_is_available()
 
-    # check that sensors_api is available
     new_measurement_test_helper
         .check_sensors_api_is_available()
 
-    # send new measurement to rabbitmq
     new_measurement_test_helper
         .send_new_measurement_to_rabbitmq()
 
-    # check that new measurement has 
-    been sent to sensors test queue
     new_measurement_test_helper
     .check_message_sent_to_queue(
         new_measurement_test_helper
@@ -131,8 +126,6 @@ def measurement_triggers_policies_evaluation_result_event():
         consts.sensors_test_queue, 
         1)
 
-    # check that MeasurementSentEvent has 
-    been sent to test queue  
     new_measurement_test_helper.
     check_message_sent_to_queue(
         new_measurement_test_helper
@@ -140,21 +133,17 @@ def measurement_triggers_policies_evaluation_result_event():
         consts.measurement_sent_event_test_queue, 
         1)
 
-    # check that PoliciesEvaluationResultEvent has 
-    been sent to test queue
     new_measurement_test_helper.
     check_message_sent_to_queue(
         new_measurement_test_helper
         .rabbitmq_configuration.vhost,
         consts.policies_evaluation_result_event_test_queue, 
         1)
-
-
 \end{lstlisting}
 
 W tym teście sprawdza się odpowiedź całego systemu na otrzymanie nowego pomiaru 
 z sensora. Jako skutek powinna zostać wygenerowana odpowiednia wiadomość z wynikiem 
-przetworzenia pomiaru na kolejce wiadomości.
+przetworzenia pomiaru, która została wysłana na kolejkę wiadomości.
 
 \subsection{Automatyzacja testów}
 
@@ -164,11 +153,11 @@ o nazwie Nuke \cite{nuke2022}.
 Za jego pomocą uruchomienie wszystkich testów sprowadza się do wykonania 
 jednej komendy. 
 
-Nuke pozwala na tworzenie własnych metod zwanych targetami, które automatyzują 
-wykonywanie pewnych czynności. Każdy z targetów wykonują określoną logikę. 
-Dodatkowo, można tworzyć kompleksową strukturę, w której każdy z targetów jest zależny 
-od tego, czy prawidłowo zostanie wykonany inny target. Istnieje także możliwość 
-dodania reguły wyzwalania poszczególnych targetów po wykonaniu innego. 
+Nuke pozwala na tworzenie własnych metod zwanych zamiarami (ang. \textit{target}), które automatyzują 
+wykonywanie pewnych czynności. Każdy z zamiarów wykonuje określoną logikę. 
+Dodatkowo, można tworzyć kompleksową strukturę, w której każdy z zamiarów jest zależny 
+od tego, czy prawidłowo zostanie wykonany inny. Istnieje także możliwość 
+dodania reguły wyzwalania poszczególnych zamiarów po wykonaniu innego. 
 Przykładowo, metoda uruchamiająca test dla konkretnego projektu wygląda w sposób 
 następujący:
 
@@ -186,8 +175,8 @@ Target TestProject => _ => _
 });
 \end{lstlisting}
 
-Wykonuje ona metodę dotnet test, uruchamianą dla projektu o nazwie ProjectName. 
-Target zależy od innej metody o nazwie CompileTestProject.
+Wykonuje ona metodę \textit{dotnet test}, uruchamianą dla konkretnego projektu. 
+Wykonanie zamiaru zależy od pomyślnego wykonania innego, o nazwie \textit{CompileTestProject}.
 
 \begin{lstlisting}
 Target CompileTestProject => _ => _
@@ -208,8 +197,8 @@ Target CompileTestProject => _ => _
 });
 \end{lstlisting}
 
-Metoda wykonuję komenę dotnet build dla projektu o nazwie ProjectName. Jest ona 
-zależna od targetu RestoreTestProject.
+Metoda wykonuję komendę \textit{dotnet build}. Jest ona 
+zależna od zamiaru \textit{RestoreTestProject}.
 
 \begin{lstlisting}
 Target RestoreTestProject => _ => _
@@ -233,10 +222,10 @@ Target RestoreTestProject => _ => _
 });
 \end{lstlisting}
 
-Metoda wykonuje funkcję dotnet restore na projekcie o nazwie ProjectName. Jednym z 
-warunków uruchomienia tego targetu jest konieczność podania nazwy projektu, wyrażona 
-przez funkcję .Requires(() => ProjectName). Target jest zależny od innego targetu o 
-nazwie Clean.
+Metoda wykonuje funkcję \textit{dotnet restore}. Jednym z 
+warunków uruchomienia tego zamiaru jest konieczność podania nazwy projektu, wyrażona 
+przez funkcję \textit{.Requires(() => ProjectName)}. Uruchomienie zamiaru jest zależne od poprawnego
+wykonania innego, o nazwie \textit{Clean}.
 
 \begin{lstlisting}
 Target Clean => _ => _
@@ -249,8 +238,8 @@ Target Clean => _ => _
 });
 \end{lstlisting}
 
-Metoda czyści repozytorium z artefaktów. Nie jest zależna od żadnego innego targetu.
-Wszystkie targety można uruchomić przy wykorzystaniu tylko jednej metody:
+Metoda czyści repozytorium z artefaktów. Nie jest zależna od żadnego innego zamiaru.
+Wszystkie zamiary można uruchomić jednocześnie przy pomocy jednej metody:
 
 \begin{lstlisting}
 ./build.sh TestProject --ProjectName facilities 
